# GLCameras

./: .clang-tidy  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  GLCameras.sln  README.md  TODO.md  vcpkg.json
.github/workflows/: build.yaml
GLCamera1/: CMakeLists.txt  GLCamera1.vcxproj  GLCamera1.vcxproj.filters  GL_ARB_multitexture.cpp  GL_ARB_multitexture.h  WGL_ARB_multisample.cpp  WGL_ARB_multisample.h  bitmap.cpp  bitmap.h  camera.cpp  camera.h  camera.hpp  gl_font.cpp  gl_font.h  input.cpp  input.h  input.hpp  main.cpp  mathlib.cpp  mathlib.h  precompile.hpp  shaders.cpp  shaders.hpp
GLCamera2/: CMakeLists.txt  GLCamera2.vcxproj  GLCamera2.vcxproj.filters  GL_ARB_multitexture.cpp  GL_ARB_multitexture.h  WGL_ARB_multisample.cpp  bitmap.cpp  bitmap.h  camera.cpp  camera.h  camera.hpp  input.cpp  input.hpp  main.cpp  mathlib.cpp  mathlib.h  shaders.cpp
GLCamera3/: GLCamera3.vcxproj  GLCamera3.vcxproj.filters  camera.cpp  camera.h  gl_font.cpp  gl_font.h  input.cpp  input.h  main.cpp  model_obj.cpp  model_obj.h
GLThirdPersonCamera1/: GLThirdPersonCamera1.vcxproj  GLThirdPersonCamera1.vcxproj.filters  GL_ARB_multitexture.cpp  entity3d.cpp  input.cpp  input.h  main.cpp  mathlib.cpp  third_person_camera.cpp  third_person_camera.h
GLThirdPersonCamera2/: GLThirdPersonCamera2.vcxproj  GLThirdPersonCamera2.vcxproj.filters  bitmap.cpp  entity3d.cpp  entity3d.h  gl_font.cpp  input.cpp  input.h  main.cpp  mathlib.h  third_person_camera.cpp  third_person_camera.h
OrbitCamera/: ControllerGL2.cpp  ControllerGL2.h  ModelGL.cpp  ModelGL.h  ObjModel.cpp  OrbitCamera.vcxproj.filters  RCb12128  ViewForm.cpp  ViewForm.h  glext.h  log.rc  log.txt
Trackball/: Makefile.linux  Makefile.mac  trackball.cbp  trackball.depend  trackball.dev
cmake/: download_file.cmake  options.cmake
cmake/Modules/: FindImgui.cmake  FindSDL2.cmake  Findstb.cmake  Findstb_image.cmake  Findstb_truetype.cmake  Findtracy.cmake
utilities/: CMakeLists.txt  input.cpp  input.hpp  precompile.hpp  shaders.cpp  shaders.hpp
